src/Components/Navbar/Navbar.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  /*background-color: white; */
  padding-left: 3%;
  padding-right: 5%;
  position: fixed; /* Make the navbar sticky */
  top: 0;/* Position it at the top of the viewport */
  left: 0;
  width: 100%;
  z-index: 1000; /* Ensure it stays on top of other elements */
  /*box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow for visual separation */
}

.navbar-logo img {
  height: 38px;
  width: 180px;
  margin-top: 20px;
  margin-bottom: 20px;
  cursor: pointer;
}

.navbar-menu {
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
}

.navbar-item {
  display: flex;
  align-items: center;
  position: relative;
  margin: 0 20px;
  padding-bottom: 10px;
}

.navbar-link,
.dropdown-button {
  background: none;
  color: black;
  border: none;
  cursor: pointer;
  font-size: 16px;
  font-family: "Roboto", sans-serif;
  font-weight: 500;
  letter-spacing: 1px;
  display: flex;
  align-items: center;
}

.navbar-link:hover,
.dropdown-button:hover {
  color: #1A3E70;
}

.dropdown-content {
  display: none;
  position: absolute;
  top: 65px;
  left: 0;
  background-color: white;
  min-width: 160px;
  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
  z-index: 1;
  padding: 0;
  margin-top: -10px;
  border-radius: 4px;
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.3s ease;
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  font-family: "Roboto", sans-serif;
  display: block;
}

.dropdown-content a:hover {
  background-color: #f0f0f0;
}

.navbar-item:hover .dropdown-content,
.dropdown-content:hover {
  display: block;
  opacity: 1;
  pointer-events: auto;
}

.btn {
  background: linear-gradient(to right, #e03b3b, #8f0404);
  color: #FFF;
  padding: 14px 25px;
  font-size: 16px;
  cursor: pointer;
  border-radius: 10px;
  border: 0;
  outline: 0;
  font-family: "Roboto", sans-serif;
  font-weight: 500;
  letter-spacing: 1px;
  transition: background 0.3s ease, box-shadow 0.3s ease;
}

.btn:hover {
  box-shadow: 0 0 35px #C61C1A;
  background: linear-gradient(to left, #e03b3b, #8f0404);
}

.arrow-icon {
  width: 16px;
  height: auto;
  margin-left: 8px;
}

